feat:  criados dominios e a configuração do banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Postgre
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/voting?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
+
+#JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
