feat: criadas sessão e pauta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/voting?useTimezone=true&s
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
+spring.application.name=voting
+server.servlet.context-path=/v1
+server.port=8080
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
