--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<version>3.4.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
