test: Adicionando testes da pauta e sessão

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Postgre
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/voting?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=postgres
 spring.datasource.password=123456
