--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/voting?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=postgres
 spring.datasource.password=123456
+spring.profiles.active=dev
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
@@ -13,4 +14,10 @@ server.port=8080
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+
+#Rabbit
+spring.rabbitmq.addresses=amqps://spkfozmx:AlZ4VfuynjdxH2zbk1PIkxJEChN4bNYe@jackal.rmq.cloudamqp.com/spkfozmx
+spring.rabbitmq.username=spkfozmx
+spring.rabbitmq.password=AlZ4VfuynjdxH2zbk1PIkxJEChN4bNYe
+ampq.rabbitmq.session.event.queueName=ms.queue.session.event-${spring.profiles.active}
